--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
-  <div class="container">
+  <div class="footer-container">
     <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}. 保留所有权利。</p>
     <p>由 <a href="https://pages.github.com/">GitHub Pages</a> 和 <a href="https://jekyllrb.com/">Jekyll</a> 强力驱动。</p>
   </div>
